--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
   <footer>
     <p>
   <nav>
-    <a href="lorem.html">God</a>|
+    <a href="index.html">God</a>|
     <a href="about.html">About me</a>|
     <a href="contacts.html">Contacts</a>|
   </nav>
