--- a/contacts.html
+++ b/contacts.html
@@ -18,7 +18,7 @@
     
   <footer>
     <nav>
-      <a href="lorem.html">God</a>|
+      <a href="index.html">God</a>|
       <a href="about.html">About me</a>|
       <a href="contacts.html">Contacts</a>|
     </nav>
